# Phase-ordering-Problem

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  comp_test.cpp  config.txt
benchmark/: benchmark_main.cpp
docs/diagrams/include/: _theme_light.puml
docs/diagrams/src/: example.puml  system-overview.puml
docs/diagrams/src/architecture/: system-overview.puml
include/: algorithms.hpp  cli_flags.hpp  cost_models.hpp  data_types.hpp  evaluator_impl.hpp  experiment_stats.hpp  factories.hpp  interfaces.hpp  ir_analyzer.hpp  llvm_facade.hpp  logging.hpp  sequence_ops.hpp  solver.hpp
src/: algorithms.cpp  cli_flags.cpp  cost_models.cpp  data_types.cpp  evaluator_impl.cpp  experiment_stats.cpp  factories.cpp  ir_analyzer.cpp  llvm_facade.cpp  logging.cpp  main.cpp  sequence_ops.cpp  solver.cpp  utils.cpp
test/: test_algorithms.cpp  test_cost_models.cpp  test_data_types.cpp  test_ir_analyzer.cpp  test_sequence_ops.cpp  test_solver.cpp
